--- a/index.html
+++ b/index.html
@@ -1,32 +1,35 @@
 <!DOCTYPE html>
 <html lang="pt-br">
-  <head>
-    <meta charset="UTF-8" />
-    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Login</title>
-    <link rel="stylesheet" href="styles.css">
-  </head>
-  <body>
-    <div class="login-box">
-      <h2>Login</h2>
-      <form>
-        <div class="box-usuario">
-          <input type="text" name="nome_de_usuario" required="" />
-          <label>Usuário</label>
+
+<head>
+  <meta charset="UTF-8" />
+  <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <title>Login</title>
+  <link rel="stylesheet" href="styles.css">
+</head>
+
+<body>
+  <div class="login-box">
+    <h2>Login</h2>
+    <form>
+      <div class="box-usuario">
+        <input type="text" name="nome_de_usuario" required="" />
+        <label>Usuário</label>
+      </div>
+      <div class="box-usuario">
+        <input type="password" name="senha_de_usuario" required="" />
+        <label>Senha</label>
+      </div>
+      <div class="btn-formulario">
+        <a id="submit" href="#">Logar</a>
+        <div id="registro">
+          Não tem uma conta?<br>
+          <a href="registro.html"> Registre-se</a>
         </div>
-        <div class="box-usuario">
-          <input type="password" name="senha_de_usuario" required="" />
-          <label>Senha</label>
-        </div>
-        <div class="btn-formulario">
-          <a id="submit" href="#">Logar</a>
-          <div id="registro">
-            Não tem uma conta?<br>
-            <a href="#"> Registre-se</a>
-          </div>
-        </div>
-      </form>
-    </div>
-  </body>
+      </div>
+    </form>
+  </div>
+</body>
+
 </html>
